# zsxqspider_cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/zsxq_pdf/: cli.py  config.py
src/zsxq_pdf/convert/: office_to_md.py  pdf_to_md.py
src/zsxq_pdf/download/: downloader.py
src/zsxq_pdf/store/: db.py  repo.py
src/zsxq_pdf/util/: sanitize.py  tags.py  timefmt.py
src/zsxq_pdf/zsxq/: client.py  cookies.py
tests/: test_cli.py  test_cookies.py  test_sanitize.py  test_tags.py
