[project]
name = "zsxq-pdf"
version = "0.1.0"
description = "Personal backup tool: sync Knowledge Planet (知识星球) PDF attachments and convert to Markdown."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Admin" }]

dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "tenacity>=8.2",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
]

[project.scripts]
zsxq-pdf = "zsxq_pdf.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
